src/golden/cards/templates/nested/errors/test.golden/nostatevalue.fl
	card NoStateValue
		template top
			hold <- x